# law-firm-digital-twin

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VISIBILITY_AND_RELEASE.md  pyproject.toml
docs/: constitution.md  g2_build_status.md  g2_scale_architecture.md  jurisdiction_data_rubric.md  operational_expert_mesh.md  source_admission_policy.md  walking_skeleton_acceptance.md
registry/: reuse-release-receipts.json  source-admission-receipts.json
schemas/: operational-router-process-v1.schema.json  reuse-release-receipt.schema.json  sealed-ipc-capability-v1.schema.json  sealed-ipc-request-v1.schema.json  secure-pipe-static-qualification-v1.schema.json  source-admission-receipt.schema.json
scripts/: build_design_c_c023_secure_ipc_fixture.py  build_design_c_e6_recovery_fixture.py  build_design_c_g0c_readiness_fixture.py  build_g2_channel_fixture.py  build_g2_domain_pack_design_catalog.py  build_g2_employment_dossier_catalog.py  build_g2_scale_fixture.py  build_g2_simpy_scheduler_fixture.py  build_g2_specialist_mesh_fixture.py  build_operational_router_process_qualification.py  operational_router_service_bootstrap.py  run_design_c_e2_replay_qualification.py  run_design_c_e2_replay_qualification_cached.py
tests/: test_campaign_spec.py  test_commit_crash_recovery.py  test_commit_protocol.py  test_communication_culture.py  test_corpus_auditor.py  test_corpus_diversity_evaluator.py  test_design_c_c023_secure_ipc_public_fixture.py  test_design_c_e6_public_fixture.py  test_design_c_public_fixture.py  test_g2_contracts.py  (+32 more)
(+89 files in other folders)
