[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "law-firm-digital-twin"
version = "0.1.0"
description = "Deterministic green-data simulation skeleton for an AI-first insurance defense law firm."
requires-python = ">=3.11"

[project.optional-dependencies]
simulation = ["simpy==4.1.2"]

[project.scripts]
law-firm-digital-twin = "law_firm_digital_twin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers -p no:cacheprovider"

